# csv-simple-pipeline

./: .env.example  .gitignore  README.md  main.py  pipeline.md  prompt.txt  pyproject.toml
.claude/: CLAUDE.md
input/: questions.json
input/csv/: bm_patient_visits.csv  business_dialog_units.csv  course_timetable.csv  disaster_events_vn.csv  ecommerce_reviews.csv  exam_scores.csv  facility_announcements_2025.csv  fdi_projects_luongtai.csv  forestry_business_reg.csv  healthcare_service_prices.csv  high_school_exam_results.csv  hp_public_services.csv  japan_lib_books.csv  listed_company_sectors.csv  maternal_health_cases.csv  med_device_bid_prices.csv  medical_book_catalog.csv  rental_listings.csv  school_staff_stats.csv  sci_publications.csv  stock_financials.csv  stock_prices.csv  student_performance.csv  vn_banks_financials.csv  vn_cities.csv  wb_agri_rural_vnm.csv  wb_indicator_series.csv  wb_infrastructure_vnm.csv  wb_procurement_contracts.csv  wb_public_sector_vnm.csv  wildlife_business_reg.csv
input/sqlite/: bm_patient_visits.sqlite  business_dialog_units.sqlite  course_timetable.sqlite  danang_hsg_list.sqlite  disaster_events_vn.sqlite  ecommerce_reviews.sqlite  exam_scores.sqlite  facility_announcements_2025.sqlite  fdi_projects_luongtai.sqlite  forestry_business_reg.sqlite  hatinh_hsg_list.sqlite  healthcare_service_prices.sqlite  high_school_exam_results.sqlite  housing_listings.sqlite  hp_public_services.sqlite  japan_lib_books.sqlite  staffs.sqlite  (+24 more)
output/: claude.json
src/: cleaning.py  converter.py  evaluator.py  executor.py  pipeline.py  schema.py
(+11 files in other folders)
